# projectmanager

./: .gitignore  clean_db.sh  docker-compose.yml  pgadmin_develop.json
app/entity/src/: resources.rs
be/: Dockerfile.develop
be/app/: requirements.txt
be/app/src/: .env  config.py  main.py
be/app/src/common/: logger.py
be/app/src/common/camino/: eic_summary_people_processor.py
be/experiments/: management.py  read_from_ods.py
berust/: Dockerfile.develop
berust/app/: Cargo.toml  Dioxus.toml  cargo-run-watch.sh  package.json
berust/app/assets/: project.css  tailwind.css
berust/app/entity/: Cargo.toml
berust/app/entity/src/: baselines.rs  config.rs  lib.rs  resource_types.rs  resources.rs  resources_baselines.rs  tasks.rs  tasks_baselines.rs  team_members.rs
berust/app/importer/: Cargo.toml
berust/app/importer/src/: camino.rs  camino_importer.rs  main.rs
berust/app/migration/: Cargo.toml
berust/app/migration/src/: lib.rs  m20250410_000001_init.rs
berust/app/src/: main.rs
berust/app/src/server/: camino.rs  mod.rs
common/: Cargo.toml  models.rs
common/src/: lib.rs  models.rs
communication/: Cargo.toml
communication/src/: baselines.rs  config.rs  lib.rs  models.rs  resources.rs  tasks.rs
fe/: Dockerfile.develop
fe/app/: package-lock.json  package.json
fe/app/public/: about.txt  test_data.json
fe/app/src/: App.js  config.js  index.js
fe/app/src/components/footer/: Footer.css  Footer.js
fe/app/src/components/gantt/: Common.css  Gantt.css  Gantt.js  ListOfTasks.css  ListOfTasks.js  Timeline.css  Timeline.js
fe/app/src/components/navigation_bar/: NavBar.css  NavBar.js
fe/app/src/gantt/: GanttPage.css  GanttPage.js
fe/app/src/login/: LoginPage.css  LoginPage.js
ferust/: Dockerfile.develop
ferust/app/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
ferust/app/assets/: main.css  project.css  tailwind.css
ferust/app/src/: main.rs
ferust/app/src/server/: camino.rs  mod.rs
