[package]
name = "pmbe"
version = "0.1.0"
authors = ["artwaz <art@waz.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]     
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
polars = { version = "0.46.0", features = ["lazy", "json", "serde", "rows"] }
axum = "0.8.3"                                    # add
tower-http = { version = "0.6.2", features = ["cors"] }
bitcode = "0.6.6"
spreadsheet-ods = "0.24.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
cargo-watch = "8.5.3"

entity = { path = "entity" }
migration = { path = "migration" }
common = { path = "../../common" }

[features]
pmbe = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
