[package]
name = "pmbe"
version = "0.1.0"
authors = ["artwaz <art@waz.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]     
actix-web = "4.10.2"
actix-cors = "0.7.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
polars = { version = "0.46.0", features = ["lazy", "json", "serde", "rows"] }
bitcode = "0.6.6"
spreadsheet-ods = "0.24.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
struct-field-names-as-array = "0.3.0"
chrono = "0.4.40"
chrono-tz = "0.10.3"

entity = { path = "entity" }
migration = { path = "migration" }
communication = { path = "../../communication", features = ["pmbe"] }

[features]
pmbe = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
