[package]
name = "importers"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.212" }
serde_json = { version = "1.0.100" }
spreadsheet-ods = "0.24.0"
chrono = { version = "0.4.31" }
polars = { version = "0.46.0" }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "tracing", "macros"] }
tracing = { version = "0.1.41" }

tracing-subscriber = "0.3.19"
