[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
tracing = "0.1"

entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "1.1"
features = [
   "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
   "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
